
Tooling
* detect maximum possible segment size on file system (e.g. FAT)
* smrawinfo
  - create
  - print info from info file
* smrawverify
  - get hashes from info file

Tests:
* retrieve data from the information file on open
* make sure certain values cannot be changed if writing/reading from raw files
* add tests for Python-bindings
* information file

20141226
* changes for updated dependencies

20141221
* worked on Python 3 support
* worked on tests

20141201
* worked on multi-threading support

20141129
* code clean up

20141120
* code clean up

20141107
* worked on multi-threading support

20141102
* bug fixes for information file

20141030
* bug fix in Python-bindings

20141026
* changes for deployment

20141022
* changes for deployment

20141021
* changes for deployment

20141007
* updated dependencies and corresponding changes
* worked on autogen.sh and synclibs.sh scripts

20140930
* removed README.macosx
* changes for project site move

20140817
* updated msvscpp files - fixes for smraw.net

20140801
* Worked on smrawmount

20140728
* updated dependencies
* fixes for FreeBSD 8 compilation
* updated dpkg files

20140621
* updated msvscpp files

20140614
* removed examples

20140612
* worked on Python bindings

20140611
* worked on Python bindings

20140610
* worked on Python bindings

20140119
* 2014 update
* updated dependencies

20131230
* updated dependencies

20131210
* updated dependencies
* smrawmount worked on Dokan support

20130901
* added smrawverify
* worked on tests
  - replaced compare test by smrawverify test
* updated msvscpp files
* code clean up

20130831
* updated dependencies
* added libcthreads build support
* worked on tests

20130520
* Bug fix in dependencies

20130420
* smrawmount added -X option

20130405
* updated dependencies

20130404
* textual changes
* updated dependencies

20130403
* changes due to libmfdata and libfdata merge

20130402
* changes due to libmfdata and libfdata merge
* removed libsmraw_legacy

20130401